# substrate-verify

./: .env.example  .gitignore  .gitleaks.toml  CITATION.cff  LICENSE  PUBLISH_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml  verify_all.py
audit_regression/: attack_cheatbench_channel.py  attack_entityprobe_replay.py  attack_guardian_bypass.py  attack_stdout_hijack.py  conformance_check.js  run_all.py  test_ads_cardinality.py  test_attest_interop.py  test_cheatbench_extend.py  test_cicd_pipeline.py  test_cid_overlay.py  test_cli_surface.py  test_conformance.py  test_consilium_dissent.py  test_docs_align.py  test_entityprobe_ethmpt.py  test_entityprobe_proof.py  test_erc4626_executed.py  test_fix10_sandbox_wrap.py  test_fix9_persistence_tamper.py  test_formal_isolation_tiers.py  test_p0_channel.py  (+12 more)
verivault/: MANIFEST.in  NIGHT_LEDGER.md  PRODUCT.md  README.md  pyproject.toml  verify_all.py
verivault/.github/workflows/: verify.yml
verivault/benchmark/: README.md
verivault/docs/: ARCHITECTURE.md  BRICK5_DESIGN.md  ENTERPRISE_RUNBOOK.md  EXTERNAL_REVIEW_RESPONSE.md  LICENSES.md  MOAT.md  STATE_MAP.md
verivault/docs/demo_certs/: OZVault_cert.json  VaultBalanceOf_cert.json  sDAI_LIVE_cert.json
verivault/eval/: conformal_gate.py  death_gate.py  death_gate_w5v2.py  head_to_head.py  prereg.md  test_algebra.py  test_cascade.py  test_certificate.py  test_correlated_failure.py  test_death_gate_runner.py  test_extractor.py  test_numerical_oracle.py  test_product_flow.py  test_redteam_limits.py  test_smt_tier.py  test_stage3.py  test_substrate_agnostic.py  virgin_spotcheck.md
verivault/eval/data/: labeled_facts.json  w5v2_facts_9.json
verivault/examples/: compose_demo.py  realcode_demo.py
verivault/forge/src/invariants/: ERC4626Inflation.sol
verivault/forge/test/: ImmunityCert.t.sol
verivault/gate/: .gitmodules  BENCHMARK.md  RESULT.md  bench_validate.py  fetch_solmate.py  foundry.toml  remappings.txt
verivault/gate/incident/: CompoundReal.sol  reorder.py
verivault/gate/src/: IVault.sol  LabeledShapes.sol  ShapesExt.sol  Targets.sol  _keep.sol
verivault/gate/targets/: CacheFromBalanceOfVault.sol  OZVault.sol  OZVaultOffset6.sol  SoladyVault.sol  UnseenSafeVault.sol  UnseenVulnVault.sol  VaultBalanceOf.sol  VaultInternal.sol
verivault/gate/test/: BenchGate.t.sol  CTokenGate.t.sol  CoupledGate.t.sol  ForkGate.t.sol  FuzzGate.t.sol  GeneralGate.t.sol  LabeledBench.t.sol  OracleCoupledGate.t.sol  RealSolmateGate.t.sol  RoundingGate.t.sol  Stage3_UnseenSafeVault.t.sol  Stage3_UnseenVulnVault.t.sol  ThirdPartyGate.t.sol  _VaultList.sol
verivault/verivault/: __init__.py  algebra.py  autowire.py  cascade.py  certificate.py  cli.py  compose.py  extract_solidity.py  numerical.py  pipeline.py  reliability.py  schemas.py  stage1_extract.py  stage2_score.py  stage5_calibrate.py
verivault/verivault/oracles/: __init__.py  base.py  forge_gate.py  smt_rounding.py
(+188 files in other folders)
